--- a/http-server/home.html
+++ b/http-server/home.html
@@ -7,7 +7,7 @@
 <body>
     <ul>
        
-        <li><a href="/projects.html">Projects</a></li>
+        <li><a href="/project.html">Project</a></li>
         <li><a href="/registration.html">Registration</a></li>
     </ul>
 </body>
