--- a/http-server/registration.html
+++ b/http-server/registration.html
@@ -8,8 +8,8 @@
   <body>
 
     <ul>
-      <li><a href="/home">Home</a></li>
-      <li><a href="/project">Projects</a></li>
+      <li><a href="/home.html">Home</a></li>
+      <li><a href="/project.html">Projects</a></li>
       
   </ul>
     <h1 align="center">Registration Form </h1>
