--- a/http-server/project.html
+++ b/http-server/project.html
@@ -6,9 +6,9 @@
 </head>
 <body>
     <ul>
-        <li><a href="/home">Home</a></li>
+        <li><a href="/home.html">Home</a></li>
     
-        <li><a href="/registration">Registration</a></li>
+        <li><a href="/registration.html">Registration</a></li>
     </ul>
 </body>
 </html>
